[package]
name = "ap-relay"
description = "A simple activitypub relay"
version = "0.3.120"
authors = ["asonix <asonix@asonix.dog>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://git.asonix.dog/asonix/relay"
keywords = ["activitypub", "relay"]
edition = "2021"
build = "src/build.rs"

[[bin]]
name = "relay"
path = "src/main.rs"

[profile.release]
strip = true

[features]
console = ["dep:console-subscriber"]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", default-features = false, features = ["compress-brotli", "compress-gzip", "rustls-0_23"] }
activitystreams = "0.7.0-alpha.25"
activitystreams-ext = "0.1.0-alpha.3"
ammonia = "4.0.0"
async-cpupool = "0.4.0"
bcrypt = "0.18"
base64 = "0.22"
clap = { version = "4.0.0", features = ["derive"] }
color-eyre = "0.6.2"
config = { version = "0.15.0", default-features = false, features = ["toml", "json", "yaml"] }
console-subscriber = { version = "0.5", optional = true }
dashmap = "6.0.1"
dotenv = "0.15.0"
futures-core = "0.3.30"
lru = "0.16.0"
metrics = "0.24.0"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = [
  "http-listener",
] }
metrics-util = "0.20.0"
mime = "0.3.16"
minify-html = "0.18"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
pin-project-lite = "0.2.9"
# pinned to metrics-util
quanta = "0.12.0"
rand = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "stream"]}
reqwest-middleware = { version = "0.5", default-features = false, features = ["json"] }
reqwest-tracing = "0.6.0"
ring = "0.17.5"
rsa = "0.9"
rsa-magic-public-key = "0.8.1"
rustls = { version = "0.23.0", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-channel-resolver = "0.3.0"
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.7"
streem = "0.2.0"
teloxide = { version = "0.17.0", default-features = false, features = [
  "ctrlc_handler",
  "macros",
  "rustls",
] }
thiserror = "2.0"
time = { version = "0.3.17", features = ["serde"] }
tracing = "0.1"
tracing-actix-web = "0.7.21"
tracing-error = "0.2"
tracing-log = "0.2"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = [
  "ansi",
  "env-filter",
  "fmt",
] }
tokio = { version = "1", features = ["full", "tracing"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dependencies.background-jobs]
version = "0.20.0"
default-features = false
features = ["error-logging", "metrics", "tokio"]

[dependencies.http-signature-normalization-actix]
version = "0.11.2"
default-features = false
features = ["server", "ring"]

[dependencies.http-signature-normalization-reqwest]
version = "0.14.1"
default-features = false
features = ["middleware", "ring"]

[build-dependencies]
color-eyre = "0.6.2"
dotenv = "0.15.0"
ructe = { version = "0.18.0", features = ["sass", "mime03"] }
toml = "0.9.0"

[profile.dev.package.rsa]
opt-level = 3
